--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ edition = "2018"
 actix-web = "3"
 env_logger = "0.8.3"
 nipper = "0.1.9"
-reqwest = "0.11.2"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+
 actix-rt = "2.1.0"
 askama = "0.10.5"
 askama_actix = "0.11.1"
+tokio = { version = "1", features = ["full"] }
