--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "actix-web-play"
+name = "github-wiki-see"
 version = "0.1.0"
 authors = ["Nelson Chen <crazysim@gmail.com>"]
 edition = "2018"
