--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ askama = "0.10.5"
 askama_actix = "0.11.1"
 tokio = { version = "0.2", features = ["full"] }
 regex = "1.5.4"
+tokio-test = "0.2.1"
