--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ rocket = "0.5.0-rc.1"
 # WIP
 askama = { git = "https://github.com/djc/askama.git", features = ["with-rocket", "mime", "mime_guess"] }
 askama_rocket = { git = "https://github.com/djc/askama.git" }
+# WIP
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
