--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ askama_rocket = { git = "https://github.com/djc/askama.git" }
 # WIP
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+comrak = "0.12.1"
