--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ askama_rocket = { git = "https://github.com/djc/askama.git" }
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 comrak = "0.12.1"
+regex = "1.5.4"
+lazy_static = "1.4.0"
