--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,6 @@ processes = []
   auto_rollback = true
 
 [[services]]
-  http_checks = []
   internal_port = 8000
   processes = ["app"]
   protocol = "tcp"
@@ -35,3 +34,12 @@ processes = []
     interval = "15s"
     restart_limit = 6
     timeout = "2s"
+
+  [[services.http_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 6
+    timeout = "2s"
+    method="get"
+    path="/m/nelsonjchen/github-wiki-test/wiki"
+    protocol="http"
