--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ nipper = "0.1.9"
 # WIP!
 rocket = "0.5.0-rc.1"
 # WIP
-askama = { git = "https://github.com/djc/askama.git", features = ["with-rocket", "mime", "mime_guess"] }
-askama_rocket = { git = "https://github.com/djc/askama.git" }
+askama = { git = "https://github.com/djc/askama.git", features = ["with-rocket", "mime", "mime_guess"], rev="4d936524" }
+askama_rocket = { git = "https://github.com/djc/askama.git", rev="4d936524" }
 reqwest = { version = "0.11", features = ["deflate", "brotli", "gzip"] }
 tokio = { version = "1", features = ["full"] }
 comrak = "0.12.1"
