--- a/fly.toml
+++ b/fly.toml
@@ -19,7 +19,7 @@ processes = []
   [services.concurrency]
     hard_limit = 30
     soft_limit = 3
-    type = "connections"
+    type = "requests"
 
   [[services.ports]]
     handlers = ["http"]
