--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,17 +30,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # In this step, this action saves a list of existing images,
-      # the cache is created without them in the post run.
-      # It also restores the cache if it exists.
-      - uses: satackey/action-docker-layer-caching@v0.0.11
-        # Ignore the failure of a step and avoid terminating the job.
-        continue-on-error: true
-      # Build multi-stage docker image stage by stage and tag each stage
-      # Untagged/old images will be pruned.
-      - run: docker build --target chef --tag chef .
-      - run: docker build --target planner --tag planner .
-      - run: docker build --target builder --tag builder .
+      - uses: docker/build-push-action@v2
+        with:
+          context: .
+          cache-from: type=gha,scope=cached-stage
+          cache-to: type=gha,scope=cached-stage,mode=max
+          load: true
       - uses: superfly/flyctl-actions@1.1
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
@@ -52,4 +47,3 @@ jobs:
         with:
           cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
           cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
-      - run: docker image prune -a --force
