--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ percent-encoding = "2.1.0"
 scraper = "0.12.0"
 quick-xml = "0.22.0"
 phf = { version = "0.10", features = ["macros"] }
+futures = "0.3.19"
 
 [features]
