--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,11 +38,11 @@ jobs:
           cache-to: type=gha,scope=cached-stage,mode=max
           load: true
           tags: app:latest
-      - uses: superfly/flyctl-actions@1.1
+      - uses: superfly/flyctl-actions@1.3
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         with:
-          args: "deploy -i app:latest"
+          args: "deploy --local-only -i app:latest"
       - name: Cloudflare Cache Purge Action
         uses: NathanVaughn/actions-cloudflare-purge@v2.0.0
         if: success()
