--- a/cfworkers/ghwsee-indexable-redirect/tsconfig.json
+++ b/cfworkers/ghwsee-indexable-redirect/tsconfig.json
@@ -10,12 +10,8 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "esModuleInterop": true,
-    "types": [
-      "@cloudflare/workers-types",
-      "@types/jest",
-      "@types/node"
-    ],
-    "allowJs": true,
+    "types": ["@cloudflare/workers-types", "@types/jest", "@types/node"],
+    "allowJs": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "test"]
