Upgrade to wrangler 2

--- a/cfworkers/ghwsee-indexable-redirect/wrangler.toml
+++ b/cfworkers/ghwsee-indexable-redirect/wrangler.toml
@@ -1,12 +1,8 @@
 name = "ghwsee-indexable-redirect"
-type = "javascript"
-zone_id = ""
 account_id = "c455dc5b9661861484370320794ab63c"
-route = ""
 workers_dev = true
 compatibility_date = "2022-02-27"
+main = "dist/worker.js"
 
 [build]
 command = "npm install && npm run build"
-[build.upload]
-format = "service-worker"
