--- a/cfworkers/ghwsee-indexable-redirect/package.json
+++ b/cfworkers/ghwsee-indexable-redirect/package.json
@@ -35,6 +35,7 @@
     "ts-node": "^10.6.0",
     "typescript": "^4.3.2",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "wrangler": "^2.0.6"
   }
 }
