--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,6 @@ scraper = "0.13.0"
 quick-xml = "0.23.0"
 phf = { version = "0.11", features = ["macros"] }
 futures = "0.3.21"
+more-asserts = "0.3.1"
 
 [features]
