--- a/fly.toml
+++ b/fly.toml
@@ -1,45 +1,47 @@
+# fly.toml app configuration file generated for github-wiki-see on 2023-07-01T09:49:30-07:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = "github-wiki-see"
-
+primary_region = "ord"
 kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-
-[env]
+kill_timeout = "5s"
 
 [experimental]
-  allowed_public_ports = []
   auto_rollback = true
 
 [[services]]
-  internal_port = 8000
-  processes = ["app"]
   protocol = "tcp"
-  script_checks = []
+  internal_port = 8000
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 1
+  processes = ["app"]
 
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
   [services.concurrency]
+    type = "connections"
     hard_limit = 30
     soft_limit = 1
-    type = "connections"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
   [[services.tcp_checks]]
-    grace_period = "1s"
     interval = "15s"
-    restart_limit = 6
     timeout = "2s"
+    grace_period = "1s"
+    restart_limit = 6
 
   [[services.http_checks]]
-    grace_period = "5s"
     interval = "15s"
-    restart_limit = 2
     timeout = "10s"
-    method="get"
-    path="/m/nelsonjchen/github-wiki-test/wiki"
-    protocol="http"
+    grace_period = "5s"
+    restart_limit = 2
+    method = "get"
+    path = "/m/nelsonjchen/github-wiki-test/wiki"
+    protocol = "http"
