--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         if: "${{ env.FLY_API_TOKEN != '' }}"
-        run: echo "defined=true" >> $GITHUB_STATE
+        run: echo "defined=true" >> $GITHUB_OUTPUT
 
   deploy:
     needs: [check-env]
