Group patch dependencies for cargo

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,7 +15,12 @@ updates:
     allow:
       # Allow both direct and indirect updates for all packages
       - dependency-type: "all"
-      
+    groups:
+      normal-dependencies:
+      patch-dependencies:
+        update-types:
+        - "patch"
+
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
     directory: "/"
