--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,21 +7,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# Who knows.
 nipper = "0.1.9"
-# WIP!
-rocket = "0.5.0-rc.2"
-# WIP
-askama = { git = "https://github.com/djc/askama.git", features = ["with-rocket", "mime", "mime_guess"], rev="4d936524" }
-askama_rocket = { git = "https://github.com/djc/askama.git", rev="4d936524" }
+rocket = "0.5.0"
+askama = { version = "0.12.1", features = ["with-rocket", "mime", "mime_guess"] }
+askama_rocket = "0.12.0"
 reqwest = { version = "0.11", features = ["deflate", "brotli", "gzip"] }
 tokio = { version = "1", features = ["full"] }
-comrak = "0.17"
+comrak = "0.20"
 regex = "1"
 lazy_static = "1.4.0"
 percent-encoding = "2.3.1"
-scraper = "0.17.1"
-quick-xml = "0.23.0"
+scraper = "0.18.1"
+quick-xml = "0.31.0"
 phf = { version = "0.11", features = ["macros"] }
 futures = "0.3.29"
 more-asserts = "0.3.1"
