--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ quick-xml = "0.31.0"
 phf = { version = "0.11", features = ["macros"] }
 futures = "0.3.29"
 more-asserts = "0.3.1"
+git-version = "0.3.9"
 
 [features]
