--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nipper = "0.1.9"
+
 rocket = "0.5.1"
 askama = { version = "0.12.1", features = ["with-rocket", "mime", "mime_guess"] }
 askama_rocket = "0.12.0"
@@ -23,5 +23,7 @@ phf = { version = "0.11", features = ["macros"] }
 futures = "0.3.30"
 more-asserts = "0.3.1"
 git-version = "0.3.9"
+lol_html = "2.6.0"
+nipper = "0.1.9"
 
 [features]
