--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,21 +9,20 @@ edition = "2021"
 [dependencies]
 
 rocket = "0.5.1"
-askama = { version = "0.12.1", features = ["with-rocket", "mime", "mime_guess"] }
-askama_rocket = "0.12.0"
-reqwest = { version = "0.12", features = ["deflate", "brotli", "gzip"] }
+askama = "0.15.4"
+reqwest = { version = "0.13.2", features = ["deflate", "brotli", "gzip"] }
 tokio = { version = "1", features = ["full"] }
-comrak = "0.28"
+comrak = "0.50.0"
 regex = "1"
-lazy_static = "1.4.0"
-percent-encoding = "2.3.1"
-scraper = "0.18.1"
-quick-xml = "0.31.0"
-phf = { version = "0.11", features = ["macros"] }
-futures = "0.3.30"
+lazy_static = "1.5.0"
+percent-encoding = "2.3.2"
+scraper = "0.25.0"
+quick-xml = "0.39.1"
+phf = { version = "0.13.1", features = ["macros"] }
+futures = "0.3.32"
 more-asserts = "0.3.1"
 git-version = "0.3.9"
-lol_html = "2.6.0"
+lol_html = "2.7.1"
 nipper = "0.1.9"
 
 [features]
